--- a/04_livrable/website/punr/home.html
+++ b/04_livrable/website/punr/home.html
@@ -50,21 +50,62 @@
          </div>
       </header>
       <div class="STDtop"><a href="#top">&lt;</a></div>
-      <article>Édition critique et numérique à partir d'un encodage de Pour un nouveau roman publié
-         en 1963 par Alain Robbe-Grillet, produit par Adrien Mével en vu de produire une édition
-         numérique de cette œuvre dans le cadre d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge
-         et M.&nbsp;Matthieu&nbsp;Marchal, effectué en Master 2 Éditions Numériques et Imprimées de Textes
-         Littéraires, à l'Université de Lille, année universitaire 2022-2023.Le présent travail contient le texte de Pour un nouveau roman et quelques-uns de ses
-         référents transtextuels ainsi que des variantes issus des premières publications des
-         articles composant le recueil. Ce travail de recherche à l'ambition de replacer l'œuvre
-         dans son contexte et ses cotextes, questionnant l'objet éditorial lui-même (Pour un
-         nouveau roman est un reccueil d'articles précédemment publié dans divers journaux
-         et revues réunis) et ses liens et le représentation que cette œuvre véhiculede la
-         tradition et de son environnement critique et littéraire contemporain..Encodage des extraits cités dans Pour un nouveau roman.Encodage des extraits cités dans Pour un nouveau roman.Encodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
-         par Adrien Mével en vu de produire une édition numérique de cette œuvre dans le cadre
-         d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge et M.&nbsp;Matthieu&nbsp;Marchal,
-         effectué en Master 2 Éditions Numériques et Imprimées de Textes Littéraires, à l'Université
-         de Lille, année universitaire 2022-2023.</article>
+      <article class="comment">
+         <section>
+            <p>Ce site est une édition critique et numérique de <span class="STDitalic">Pour un nouveau roman</span> publié en 1963 par Alain Robbe-Grillet réalisée par Adrien Mével étudiant de Master&nbsp;2&nbsp;Lettres
+               modernes «&nbsp;Éditions Numériques et Imprimées de Textes Littéraires&nbsp;», année universitaire
+               2022-2023, dans le cadre d'un travail de recherche encadré par Mme Florence&nbsp;<span class="STDsc">de&nbsp;Chalonge</span> et M.&nbsp;Matthieu <span class="STDsc">Marchal</span>.</p>
+            <p>Produite à partir d'un encodage xml-tei, cette édition a l'ambition de replacer l'œuvre
+               dans son contexte et ses cotextes, questionnant l'objet éditorial lui-même (<span class="STDitalic">Pour un nouveau roman</span> est un reccueil d'articles précédemment publié dans divers journaux et revues réunis)
+               et la représentation que cette œuvre véhicule de la tradition littéraire et de son
+               environnement critique et littéraire contemporain.</p>
+         </section>
+         <section>
+            <h3>La version juin 2023 contient&nbsp;:</h3>
+            <ul>
+               <li>l'ensemble du texte</li>
+               <li>l'architecture du site qui sera amené à être enrichi</li>
+               <li>la possibilité de faire apparaître ou non les numéros de page au sein du texte (le
+                  bouton est sur la gauche)</li>
+               <li>les éléments &lt;ref&gt; (soit les références) signalés par une infobulle jusqu'à la section
+                  <a href="punr_ch05.html">«&nbsp;Éléments d'une anthologie moderne&nbsp;»</a>.</li>
+               <li>les éléments &lt;w&gt; (soit les termes des index thématiques) encodés jusqu'à la section
+                  <a href="punr_ch05.html">«&nbsp;Éléments d'une anthologie moderne&nbsp;»</a>.</li>
+               <li>les éléments &lt;quote&gt; (soit les citations) repérés sur l'ensemble du recueil et les
+                  élémnents &lt;quote&gt; issus des œuvres de Robert Pinget de la section <a href="punr_ch10.html">«&nbsp;Un roman qui s'invente lui-même&nbsp;»</a> en contexte.</li>
+               <li>une <a href="database.html">illustration de la base de données</a> proche de sa version définitive.
+                  											
+                  <ul>
+                     <li>La page est un peu longue à charger et nécessite (contrairement aux autres) d'être
+                        connecté à internet.</li>
+                  </ul>
+               </li>
+               <li>des introductions, qui seront amenées à être complétées, voire remaniées aux articles
+                  : 
+                  											
+                  <ul>
+                     <li><a href="punr_ch01.html">«&nbsp;À quoi servent les théories&nbsp;»</a></li>
+                     <li><a href="punr_ch02.html">«&nbsp;Une voie pour le roman futur&nbsp;»</a></li>
+                     <li><a href="punr_ch03.html">«Sur quelques notions périmées&nbsp;&nbsp;»</a></li>
+                     <li><a href="punr_ch04.html">«&nbsp;Nature, humanisme, tragédie&nbsp;»</a></li>
+                     <li><a href="punr_ch05.html">«&nbsp;Éléments d’une anthologie moderne&nbsp;»</a></li>
+                     <li><a href="punr_ch10.html">«&nbsp;Un roman qui s'invente lui-même&nbsp;»</a></li>
+                  </ul>
+               </li>
+               <li>une première version des <a href="index.html">index des notions adverses et des expressions préférées</a></li>
+            </ul>
+            <h3>Y sera ajouté&nbsp;:</h3>
+            <ul>
+               <li>les contextes des citations des œuvres de Sartre</li>
+               <li>une chronologie et d'autres commentaires thématiques</li>
+               <li>l'index des notions, en contexte plutôt que seule</li>
+               <li>les éléments &lt;ref&gt; pleinement encodés sur l'ensemble du recueil</li>
+               <li>des notes explicatives, en infobulles</li>
+               <li>une navigation par "élément rhétorique" au sein des articles</li>
+               <li>une bibliographie</li>
+            </ul>
+         </section>
+      </article>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille"></a></footer>
    </body>
 </html>
