--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -51,7 +51,9 @@
       </header>
       <div class="STDtop"><a href="#top">&lt;</a></div>
       <article class="index">
-         <section class="intro">intro goes here</section>
+         <section class="intro">
+            <p></p>
+         </section>
          <section class="index bad">
             <h2>Index des notions adverses</h2>
             <ul>
