--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -58,7 +58,7 @@
             <details>
                <summary>Introduction</summary>
                <p>Premier texte du recueil, cet article est identifiée par Galia <span class="STDsc">Yanoshevsky</span> comme une réécriture augmentée des articles «&nbsp;Il écrit comme Stendhal&nbsp;» publié le
-                  25&nbsp;octobre&nbsp;1955 dans <span class="STDitalic">L'Express</span> et «&nbsp;La littérature, aujourd'hui - VI&nbsp;» publié dans le numéro 14 de <span span="STDitalic">Tel Quel</span> en 1963. Outre sa fonction de seuil et d'introduction aux écrits théoriques qui suivent
+                  25&nbsp;octobre&nbsp;1955 dans <span class="STDitalic">L'Express</span> et «&nbsp;La littérature, aujourd'hui - VI&nbsp;» publié dans le numéro 14 de <span class="STDitalic">Tel Quel</span> en 1963. Outre sa fonction de seuil et d'introduction aux écrits théoriques qui suivent
                   ce texte place les jalons de la rhétorique de Robbe-Grillet.</p>
                <p>Se plaignant de la récéption de ses œuvres puis des articles publiés dans <span class="STDitalic">L'Express</span> qui sont depuis devenus le présent recueil, Robbe-Grillet se positionne comme tenant
                   du bon sens&nbsp;: il n'est pas un théoricien par vocation mais par réaction. Il ne s'agit
@@ -69,9 +69,9 @@
                   d'esquisser ici) en opposition aux tenants d'une tradition «&nbsp;immobile, figée&nbsp;» voire
                   «&nbsp;nuisible&nbsp;». Contre les critiques, contre Sartre, Robbe-Grillet défend (non pas «&nbsp;un&nbsp;»)
                   mais l'«&nbsp;exercice problématique de la littérature&nbsp;» qui constitue, avec le rejet d'une
-                  écriture traditionaliste décriée comme relevant d'un pastiche éculéeNBP et avec la
-                  condamnation d'une critique psychologisante, le premier jalon théorique de l'ouvrage
-                  et une véritable définition du rôle de la littérature complétée au fil du recueil.</p>
+                  écriture traditionaliste décriée comme relevant d'un pastiche éculée et avec la condamnation
+                  d'une critique psychologisante, le premier jalon théorique de l'ouvrage et une véritable
+                  définition du rôle de la littérature complétée au fil du recueil.</p>
                <p>Notons enfin une technique usuelle chez Robbe-Grillet consistant à vider l'argumentation
                   en limitant autant que possible la portée de ces écrits théoriques, si l'on aurait
                   tord de considérer que Robbe-Grillet s'autorise ici à se contredire, il est juste
