--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -104,7 +104,6 @@
                <li>«&nbsp;tranche de vie&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_35">35</a>]</span></li>
                <li>«&nbsp;naturel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_35">35</a>]</span></li>
                <li>«&nbsp;action&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_37">37</a>]</span></li>
-               <li>«&nbsp;Voyez, diront-ils, comme, dans les années cinquante, on savait inventer des histoires&nbsp;!&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_38">38</a>]</span></li>
                <li>«&nbsp;l’engagement&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_39">39</a>]</span></li>
                <li>«&nbsp;décadence&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_40">40</a>]</span></li>
                <li>«&nbsp;gratuité&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_40">40</a>]</span></li>
@@ -160,6 +159,54 @@
                <li>«&nbsp;humaine&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
                <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
                <li>«&nbsp;tragique&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
+               <li>«&nbsp;théâtre de laboratoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_121">121</a>]</span></li>
+               <li>«&nbsp;héros&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_124">124</a>]</span></li>
+               <li>«&nbsp;pensait&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_125">125</a>]</span></li>
+               <li>«&nbsp;Nouveau Roman&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_142">142</a>]</span></li>
+               <li>«&nbsp;écoles&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_144">144</a>]</span></li>
+               <li>«&nbsp;vrai roman&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_145">145</a>]</span></li>
+               <li>«&nbsp;confusion&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_145">145</a>]</span></li>
+               <li>«&nbsp;personnages&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_146">146</a>]</span></li>
+               <li>«&nbsp;humains&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_147">147</a>]</span></li>
+               <li>«&nbsp;objectivité&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_147">147</a>]</span></li>
+               <li>un homme<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_148">148</a>]</span></li>
+               <li>jamais<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_148">148</a>]</span></li>
+               <li>«&nbsp;théorique&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_156">156</a>]</span></li>
+               <li>«&nbsp;réel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_157">157</a>]</span></li>
+               <li>«&nbsp;droite&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_159">159</a>]</span></li>
+               <li>«&nbsp;gauche&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_159">159</a>]</span></li>
+               <li>«&nbsp;naturel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_161">161</a>]</span></li>
+               <li>«&nbsp;réel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_161">161</a>]</span></li>
+               <li>«&nbsp;cartes-postales&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>«&nbsp;réalisme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>«&nbsp;histoire vécue&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_163">163</a>]</span></li>
+               <li>«&nbsp;temps&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_163">163</a>]</span></li>
+               <li>«&nbsp;réelle&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_164">164</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_165">165</a>]</span></li>
+               <li>«&nbsp;destin&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_167">167</a>]</span></li>
+               <li>«&nbsp;histoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_168">168</a>]</span></li>
+               <li>«&nbsp;réel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_170">170</a>]</span></li>
+               <li>«&nbsp;bon sens&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_171">171</a>]</span></li>
+               <li>«&nbsp;faire mieux&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_171">171</a>]</span></li>
+               <li>«&nbsp;progrès&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_172">172</a>]</span></li>
+               <li>«&nbsp;bon outil&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_173">173</a>]</span></li>
+               <li>«&nbsp;réalisme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_173">173</a>]</span></li>
+               <li>«&nbsp;explorer&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_173">173</a>]</span></li>
+               <li>«&nbsp;exprimer&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_173">173</a>]</span></li>
+               <li>«&nbsp;réalistes&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_174">174</a>]</span></li>
+               <li>«&nbsp;sur le vif&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_175">175</a>]</span></li>
+               <li>«&nbsp;rafraîchir la mémoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_175">175</a>]</span></li>
+               <li>«&nbsp;vraisemblable&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>«&nbsp;conforme au type&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>«&nbsp;personnages&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>«&nbsp;fait vrai&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>«&nbsp;profond&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_178">178</a>]</span></li>
+               <li>«&nbsp;grâce&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_178">178</a>]</span></li>
+               <li>«&nbsp;réel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_178">178</a>]</span></li>
+               <li>«&nbsp;Nouveau Roman&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_181">181</a>]</span></li>
+               <li>«&nbsp;mode qui passe&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_181">181</a>]</span></li>
+               <li>«&nbsp;éternel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_182">182</a>]</span></li>
             </ul>
          </section>
          <section class="index">
@@ -217,6 +264,32 @@
                <li>dans<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
                <li>connaissance<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
                <li>en face<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_79">79</a>]</span></li>
+               <li>choses,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_147">147</a>]</span></li>
+               <li>toujours<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch11.html#page_148">148</a>]</span></li>
+               <li>vraie<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>vraie<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>vrai,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>faux<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>faire croire<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>peu de réalité,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_162">162</a>]</span></li>
+               <li>ailleurs<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_165">165</a>]</span></li>
+               <li>autrefois.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_165">165</a>]</span></li>
+               <li>dans sa tête<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_165">165</a>]</span></li>
+               <li>imaginée <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_165">165</a>]</span></li>
+               <li>déprend<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_167">167</a>]</span></li>
+               <li>créateur.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch12.html#page_168">168</a>]</span></li>
+               <li>constitue<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_174">174</a>]</span></li>
+               <li>illusion réaliste.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_175">175</a>]</span></li>
+               <li>parce qu<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_175">175</a>]</span></li>
+               <li>faux<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>vérisme.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_176">176</a>]</span></li>
+               <li>vraisemblance<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_177">177</a>]</span></li>
+               <li>absurde&nbsp;?<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_177">177</a>]</span></li>
+               <li>est,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_177">177</a>]</span></li>
+               <li>réaliste<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_177">177</a>]</span></li>
+               <li>autre chose.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_178">178</a>]</span></li>
+               <li>tout change sans cesse<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_182">182</a>]</span></li>
+               <li>toujours du nouveau.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch13.html#page_182">182</a>]</span></li>
             </ul>
          </section>
       </article>
