--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -71,7 +71,7 @@
             </details>
             <div class="smallgap"></div>
             <h3 id="d1e1337"><span id="page_54" class="STDgray STDsmall pb">[54]</span>Nature, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
-            <div class="epigraph" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">
+            <div class="epigraph" onclick="displayExtract('toDefine','2','0',1);">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
                   refuser cette récupération et rechercher les moyens techniques de ne pas y succomber
