--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -75,12 +75,12 @@
                   les propos que Robbe-Grillet tient également dans «&nbsp;Une voie pour le roman futur&nbsp;».</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3738">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <h3 id="d1e3483">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
-                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
+                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
                des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
-               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
+               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
             <p>Il faut bien tenter d’en retracer, sinon les anecdotes –&nbsp;qui se nouent et se dissolvent
                à chaque page dans des contradictions, des variantes et des sauts périlleux où l’on
                retombe moins souvent sur les pieds que sur la tête&nbsp;–&nbsp;du moins le <span class="STDitalic">mouvement</span> qui, s’il est quelquefois difficile à saisir au milieu de ce sabotage permanent,
@@ -150,7 +150,7 @@
                s’ouvrant tous par ces trois mots, mais dégénérant à la fin en une cacophonie de phrases
                sans suite, de cris, de balbutiements et autres <span class="quote" onclick="displayExtract('pr_02_239','2','1',1);">«&nbsp;bruits de bouche&nbsp;»</span>.</p>
             <p>Une fois de plus tout est à refaire. Cependant, en un sens (le seul qui nous importe),
-               <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
+               <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
          </article>
          <section class="extract_section">
             <div id="toDefine" class="extractHide">
