--- a/04_livrable/website/punr/home.html
+++ b/04_livrable/website/punr/home.html
@@ -92,13 +92,19 @@
                      <li><a href="punr_ch10.html">«&nbsp;Un roman qui s'invente lui-même&nbsp;»</a></li>
                   </ul>
                </li>
-               <li>une première version des <a href="index.html">index des notions adverses et des expressions préférées</a></li>
+               <li>les <a href="index.html">index des notions adverses et des expressions préférées</a></li>
             </ul>
             <h3>Y sera ajouté&nbsp;:</h3>
             <ul>
                <li>les contextes des citations des œuvres de Sartre</li>
-               <li>une chronologie et d'autres commentaires thématiques</li>
-               <li>l'index des notions, en contexte plutôt que seule</li>
+               <li>une chronologie et d'autres commentaires thématiques
+                  											
+                  <ul>
+                     <li>commentaire vis à vis de Sartre, l'esthétique d'ARG</li>
+                     <li>sur les index, commentaire des termes non retenus etc...</li>
+                     <li>la rhétorique d'ARG</li>
+                  </ul>
+               </li>
                <li>les éléments &lt;ref&gt; pleinement encodés sur l'ensemble du recueil</li>
                <li>des notes explicatives, en infobulles</li>
                <li>une navigation par "élément rhétorique" au sein des articles</li>
