--- a/04_livrable/website/punr/database.html
+++ b/04_livrable/website/punr/database.html
@@ -41,7 +41,8 @@
                      <ol class="chapter_nav" style="list-style:none;">
                         <li><a href="database.html">Illustration de la base de données</a></li>
                         <li><a href="timeline.html">Chronologie</a></li>
-                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                        <li><a href="index0.html">Index des notions adverses </a></li>
+                        <li><a href="index.html">Index des expressions privilégiées</a></li>
                      </ol>
                   </li>
                </ul>
