--- a/04_livrable/website/punr/home.html
+++ b/04_livrable/website/punr/home.html
@@ -41,7 +41,8 @@
                      <ol class="chapter_nav" style="list-style:none;">
                         <li><a href="database.html">Illustration de la base de données</a></li>
                         <li><a href="timeline.html">Chronologie</a></li>
-                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                        <li><a href="index0.html">Index des notions adverses </a></li>
+                        <li><a href="index.html">Index des expressions privilégiées</a></li>
                      </ol>
                   </li>
                </ul>
@@ -92,7 +93,8 @@
                      <li><a href="punr_ch10.html">«&nbsp;Un roman qui s'invente lui-même&nbsp;»</a></li>
                   </ul>
                </li>
-               <li>les <a href="index.html">index des notions adverses et des expressions préférées</a></li>
+               <li>les <a href="index.html">index des expressions privilégiées</a></li>
+               <li><a href="index0.html">Index des notions adverses</a></li>
             </ul>
             <h3>Y sera ajouté&nbsp;:</h3>
             <ul>
