--- a/04_livrable/website/punr/index0.html
+++ b/04_livrable/website/punr/index0.html
@@ -165,6 +165,8 @@
                <li>L’intrigue sera d’autant plus <span class="Axi0">«&nbsp;humaine&nbsp;»</span> qu’elle sera plus <span class="Axi0">équivoque.</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
                <li>des idées de <span class="Axi0">«&nbsp;nature&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
                <li>le germe <span class="Axi0">«&nbsp;tragique&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
+               <li>Le regard demeure malgré tout notre meilleure arme, surtout s’il s’en tient aux seules
+                  lignes. Quant à sa <span class="Axi0">«&nbsp;subjectivité&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_81">81</a>]</span></li>
                <li>les mots <span class="Axi0">«&nbsp;théâtre de laboratoire&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_121">121</a>]</span></li>
                <li>les <span class="Axi0">«&nbsp;héros&nbsp;»</span> de Beckett<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_124">124</a>]</span></li>
                <li>on y <span class="Axi0">«&nbsp;pensait&nbsp;»</span> ferme<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch09.html#page_125">125</a>]</span></li>
