--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -134,6 +134,9 @@
                <li>ce qu’il y a <span class="Axi2">dans</span> ces choses<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
                <li> poursuivent la <span class="Axi2">connaissance</span> des textures<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
                <li><span class="Axi2">en face</span> des choses.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_79">79</a>]</span></li>
+               <li>tel que l’oriente <span class="Axi2">mon point de vue&nbsp;;</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_81">81</a>]</span></li>
+               <li>sert précisément à définir <span class="Axi2">ma situation dans le monde.</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_81">81</a>]</span></li>
+               <li>identifier ce qui ne l’est pas, ce qui <span class="Axi2">est un,</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_82">82</a>]</span></li>
                <li>ce malheur est <span class="Axi2">situé</span> dans l’espace et le temps<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_82">82</a>]</span></li>
                <li>Les mots et les phrases, par exemple, y deviennent aussi des <span class="Axi2">objets, </span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch08.html#page_108">108</a>]</span></li>
                <li>fragment détaché s’était <span class="Axi2">éternisé à l’état de chute</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch08.html#page_108">108</a>]</span></li>
